--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "enes-sh",
+  "name": "test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,9 +10,9 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "next": "14.2.6",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "15.0.0-canary.132",
+    "react": "19.0.0-rc-eb3ad065-20240822",
+    "react-dom": "19.0.0-rc-eb3ad065-20240822"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.1",
@@ -21,8 +21,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.6",
-    "husky": "^9.1.5",
+    "eslint-config-next": "15.0.0-canary.132",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
