--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "next": "15.0.0-canary.132",
-    "react": "19.0.0-rc-eb3ad065-20240822",
-    "react-dom": "19.0.0-rc-eb3ad065-20240822"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.1",
@@ -21,7 +21,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.0-canary.132",
+       "eslint-config-next": "14.2.7",
+    "husky": "^9.1.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
