--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "next": "14.2.7",
+    "next-mdx-remote": "^5.0.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.7"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.1",
@@ -20,10 +21,17 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-       "eslint-config-next": "14.2.7",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.7",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
     "husky": "^9.1.5",
     "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-package-perfection": "^1.1.0",
+    "prettier-plugin-sort-json": "^4.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
