--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,16 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript", "prettier", "plugin:react/recommended", "plugin:@typescript-eslint/recommended"],
-  "plugins": ["react", "@typescript-eslint"],
+  "extends": [
+    "next/core-web-vitals",
+    "next/typescript",
+    "prettier",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:storybook/recommended"
+  ],
+  "plugins": [
+    "react",
+    "@typescript-eslint"
+  ],
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module"
