refactor: change tsconfig import alias, add: new components, add: mock navigation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,5 +14,9 @@
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module"
-  }
+  },
+  "rules": {
+      "react/jsx-uses-react": "off",
+      "react/react-in-jsx-scope": "off"
+    }
 }
