--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"],
-      "app/*": ["./app/*"],
+      "@public/*": ["./public/*"],
+      "@stories/*": ["./stories/*"],
+      "@app/*": ["./app/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.mjs"],
