--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^11.4.0",
     "lucide-react": "^0.439.0",
     "next": "^14.2.8",
+    "next-intl": "^3.19.1",
     "next-mdx-remote": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
