--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -19,9 +19,9 @@
     ],
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
+    "target": "ES2017"
   },
   "exclude": ["node_modules"],
-  "extends": "@enes-sh/typescript-config/tsconfig.base.json",
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"]
 }
