--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -13,6 +13,7 @@
     "@enes-sh/utils": "workspace:*",
     "@t3-oss/env-nextjs": "^0.11.1",
     "next": "14.2.13",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.8"
