--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "@enes-sh/admin",
-  "version": "1.0.0",
   "private": true,
+  "name": "@enes-sh/admin",
+  "version": "1.0.1",
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.5.3",
+    "@enes-sh/db": "workspace:*",
     "@enes-sh/ui": "workspace:*",
     "@enes-sh/utils": "workspace:*",
     "@t3-oss/env-nextjs": "^0.11.1",
