feat(db): add prisma support, add next-auth base schema

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,10 +2,16 @@
   "private": true,
   "name": "@enes-sh/db",
   "version": "1.1.0",
-  "description": "db library of @enes-sh",
+  "description": "Database library of @enes-sh",
   "author": "Enes Bayraktar <enes.bayraktar@outlook.com.tr>",
   "type": "module",
-  "main": "./src/index.ts",
+  "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write .",
+    "prepare": "npm run build"
+  },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
@@ -13,14 +19,14 @@
     "@enes-sh/eslint-config": "workspace:*",
     "@enes-sh/typescript-config": "workspace:*",
     "@types/bun": "latest",
-    "drizzle-kit": "^0.24.2",
     "eslint": "^8",
     "prettier": "^3.3.3",
     "typescript": "^5"
   },
   "dependencies": {
+    "@prisma/client": "^5.20.0",
     "@vercel/postgres": "^0.10.0",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.33.0"
+    "prisma": "^5.20.0"
   }
 }
