--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,7 +28,8 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "framer-motion": "^11.9.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zustand": "^5.0.0-rc.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
