--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -14,6 +14,7 @@
     "@enes-sh/ui": "workspace:*",
     "@enes-sh/utils": "workspace:*",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "lucide-react": "^0.453.0",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
     "react": "^18",
