refactor(db): add cache support for hot-reload issues at prisma client

--- a/packages/db/turbo.json
+++ b/packages/db/turbo.json
@@ -2,7 +2,7 @@
   "extends": ["//"],
   "tasks": {
     "build": {
-      "env": ["DATABASE_URL"]
+      "env": ["DATABASE_URL", "NODE_ENV"]
     }
   }
 }
