--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -13,6 +13,7 @@
     "@enes-sh/db": "workspace:*",
     "@enes-sh/ui": "workspace:*",
     "@enes-sh/utils": "workspace:*",
+    "@hookform/resolvers": "^3.9.0",
     "@t3-oss/env-nextjs": "^0.11.1",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
@@ -20,6 +21,7 @@
     "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "sonner": "^1.5.0",
     "zod": "^3.23.8"
   },
