refactor(root): move config packages to tools workspace

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "turbo dev",
     "build:packages": "turbo build --filter=./packages/*",
     "dev:packages": "turbo dev --filter=./packages/*",
+    "dev:tools": "turbo dev --filter=./tools/*",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prepare": "husky"
@@ -29,6 +30,7 @@
   "packageManager": "bun@1.1.29",
   "workspaces": [
     "apps/*",
-    "packages/*"
+    "packages/*",
+    "tools/*"
   ]
 }
