--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@enes-sh/ui",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "Wrapper for @shadcn/ui",
   "author": "Enes Bayraktar <enes.bayraktar@outlook.com.tr>",
   "type": "module",
@@ -23,6 +23,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
