--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@enes-sh/admin",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -14,6 +14,7 @@
     "@enes-sh/ui": "workspace:*",
     "@enes-sh/utils": "workspace:*",
     "@hookform/resolvers": "^3.9.0",
+    "@mdxeditor/editor": "^3.14.0",
     "@t3-oss/env-nextjs": "^0.11.1",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
