--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mdxeditor/editor": "^3.14.0",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-table": "^8.20.5",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
     "next": "^14.2.15",
