refactor(admin): change admin project name to domain identifier

--- a/apps/admin.enes.sh/package.json
+++ b/apps/admin.enes.sh/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@enes-sh/admin",
+  "name": "admin.enes.sh",
   "version": "3.1.0",
   "scripts": {
     "build": "next build",
