--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "next-intl": "^3.25.1",
     "react": "19.0.0-rc-66855b96-20241106",
